# root

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vis.md  workspace.toml
mutate-toml/: Cargo.toml
mutate-toml/src/: lib.rs
pointsto/: .project.toml  INSTANTIATION_NOTES.md
pointsto/src/: analysis.ts  arenas.ts  ast.ts  callgraph.ts  index.ts  kleene.ts  lexer.ts  parser.ts  places.ts
pointsto/test/: analysis.test.ts  final.test.ts  parse.test.ts
re/: .project.toml  README.md  build.mjs  cli.mts  cli.ts  paths.mts  types.d.mts
re/daemon/: daemon.mts  daemon.ts  diff.mts  generate.ts  mapping.mts  parse.mts  parse.ts  types.ts  validate.mts  write.ts
re/mutate-toml/: Cargo.toml
re/mutate-toml/src/snapshots/: mutate_toml__tests__append_to_array.snap  mutate_toml__tests__insert_new_key.snap  mutate_toml__tests__insert_new_table.snap  mutate_toml__tests__remove_from_array.snap  mutate_toml__tests__set_dotted_key_new_table.snap
site/: .project.toml  app.config.ts  index.html  vite.config.ts
site/src/: app.tsx  entry-server.tsx  font-fallbacks.css  main.ts
src/: cli.ts  daemon.ts  generate.ts  parse.ts  sync.ts  types.ts
src/daemon/: daemon.ts  generate.ts  types.ts
src/sync/: sync.ts
ts-arena/: .project.toml  arena.test.ts  bitset.ts  index.ts
ts-dep-analyze/: index.ts
ts-hash/: .project.toml  COMPILER-API.md
ts-hash/docs/: codegen.md  ref-bug.md  walker.md
ts-hash/src/: cli.ts  codegen.ts  hasher.ts  hashmap.ts  hashset.ts  index.ts  siphash.ts  walker.ts
ts-hash/test/: cli.test.ts  codegen.test.ts  (+5 more)
(+45 files in other folders)
