[package]
name = "mutate-toml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
taplo = "0.13"
rowan = "0.15"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
insta = "1"
